Change something in notebook

--- a/finance-notebook.ipynb
+++ b/finance-notebook.ipynb
@@ -5,7 +5,15 @@
    "execution_count": null,
    "id": "d4567d53-dd91-4cfe-8a98-04c0dd688a0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    }
+   ],
    "source": [
     "spark"
    ]
@@ -17,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Test notebook\")"
+    "print(\"Test Notebook\")"
    ]
   },
   {
@@ -68,6 +76,14 @@
     "# Showing the result of the group by operation\n",
     "department_avg_salary.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fcefcf6-3b7e-4992-9c8a-b7677ea91f8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
