--- a/finance-notebook.ipynb
+++ b/finance-notebook.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Test notebook\")"
+    "print(\"Test notebook 2\")"
    ]
   },
   {
